npm scripts and fix breadcrumbs on mobiles

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -70,6 +70,7 @@ body {
 
 .im.charlike.breadcrumb {
   font-size: 1.1rem;
+  line-height: 1.1;
   display: inline-block;
   vertical-align: middle;
 }
